# SportShop

./: .env  .gitignore  Cargo.toml  TELEGRAM_WEBAPP_SETUP.md  check_db.rs  check_products.rs  nginx_webapp.conf  structure.txt  test_api.html  test_db.rs  перезапуск.txt
.sqlx/: query-0bbf3224caee4577d819749137da6abbd6573f17fca8498929648b0807c89676.json  query-0cb81c0bd69c61ccba1088fd35a761462b98684f49eb642eaf54d6d966cff0a4.json  query-0cd71a6d794dc87f5c8c54aa9d706f93aac6216b2e723f2a61239a7bb0bceec3.json  query-16bfbdb50e9f06351554db06eaa51ad0530c44f861fd86fc87569964613ae9c2.json  query-8255010e5ac068e9275ffa82cd02705201da4e28eba1bfc33068e925d1630d64.json  query-97fbe12d5aeb0e9be9493a0b608463d48328bba17a69c469e979da2f31095f38.json  query-a4cbb3de73c3b669c1bff3e662c0ce84629da7eb78cbed9c48a8f6e6b3efaa68.json  query-ba5cedf7c6b2752b2b4859d21c8d8c576527dd2405ae8ebd6ea7733fd4fbedf1.json  query-bcbf01593db8c86ec056681702866767a46e0ba768d44a06b0cf1dcb90fe3466.json  query-dea0eb07e4a700b1f954b6e7b35deb7a425bce9d05fdc4c0168448dd07ed2a26.json  query-e4bb066a4b6eed94569ed6fbad8a60acd1ccd976a41d22a85eac0ee54bc31869.json  query-f4328b242b62f1779fed2f703e77278996c17db6ae74b521b0fd91946137954e.json  query-ff2304c31330dee37c87dce09fb0cc1843fb2f8b29477b0ee19638a631503508.json
backend/src/: main.rs  models.rs
database/: schema.sql  shop.db  shop.db-shm  shop.db-wal
frontend/public/: cart.html  index.html  product.html
migrations/: 20250705205020_create_products_table.sql  20250705213417_add_image_url_to_products.sql  20250706163545_create_categories.sql  20250706184729_create_categories_table.sql  20250706184803_create_products_table.sql  20250707203647_create_cart_table.sql  20250713123258_create_cart_table.sql  20250715081705_create_orders_table.sql  20250716183912_create_payments_table.sql  20250718200000_add_delivery_address_to_orders.sql  20250718200001_create_order_items_table.sql
src/: api.rs  database.rs  main.rs  models.rs  telegram_bot.rs  telegram_notifications.rs  telegram_payments.rs  ton_payment.rs
src/api/: cart.rs  categories.rs  mod.rs  products.rs
src/mod/: mod.rs  (+1 more)
(+11 files in other folders)
