[package]
name = "sportshop"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "Sport nutrition e-commerce"
license = "MIT"
repository = "https://github.com/AlexZemliakov/SportShop"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
tera = "1.19"
actix-files = "0.6"
chrono = { version = "0.4.41", features = ["serde"] }
actix-cors = "0.7.1" # или более новая версия