[package]
name = "sportshop"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "Sport nutrition e-commerce"
license = "MIT"
repository = "https://github.com/AlexZemliakov/SportShop"

[[bin]]
name = "check_db"
path = "check_db.rs"

[[bin]]
name = "test_db"
path = "test_db.rs"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
dotenv = "0.15"
tera = "1.19"
actix-files = "0.6"
chrono = { version = "0.4.41", features = ["serde"] }
actix-cors = "0.7.1"
uuid = { version = "1.17.0", features = ["v4"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["json"] }
thiserror = "2.0.12"
teloxide = { version = "0.17.0", features = ["macros"],default-features = false }


